--- a/project1.html
+++ b/project1.html
@@ -25,7 +25,7 @@
                 adjust lighting for a more comfortable and natural feel.
             </p>
 
-            <h2>Materials</h2>
+            <h2>Materials Used: </h2>
             <ul>
                 <li>Arduino Uno</li>
                 <li>LED</li>
@@ -34,6 +34,12 @@
                 <li>Jumper wires</li>
             </ul>
 
+            <h2> Reference Materials</h2>
+            <ul>
+                <li>TinkerCAD</li>
+                <li>Youtube Tutorials</li>
+                
+            </ul>
 
              <!-- Image Section -->
              <h2>Image</h2>
