fixed project1 issues

--- a/Projects/project1.html
+++ b/Projects/project1.html
@@ -44,14 +44,14 @@
              <!-- Image Section -->
              <h2>Image</h2>
              <div class="image-container">
-                 <img src="images/visual.jpg" alt="visual">
+                 <img src="images/project1visual.jpg" alt="visual">
              </div>
 
             <!-- Video Section -->
             <h2>Demonstration Video</h2>
             <div class="video-container">
                 <video controls>
-                    <source src="video/LED_blink.mp4"type="video/mp4">
+                    <source src="video/project1LED_blink.mp4"type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
