--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="project">
                     <h3>Project 1: LED Blink</h3>
                     <p>This project demonstrates basic control of an LED with Arduino, including a button to control the light.</p>
-                    <a href="projects/project1.html" class="button">View Project</a>
+                    <a href="Projects/project1.html" class="button">View Project</a>
                 </div>
 
                 <!-- Project 2 -->
