--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <p>Feel free to reach out if you have any questions about these projects or the course.</p>
                 <ul>
                     <li>Email: nusyyasir@gmail.com</li>
-                    <li>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></li>
+                    <li>GitHub: <a href="https://github.com/nusyba23" target="_blank">github.com/nusyba23</a></li>
                 </ul>
             </div>
         </section>
