fixed project1 page

--- a/Projects/project1.html
+++ b/Projects/project1.html
@@ -44,7 +44,7 @@
              <!-- Image Section -->
              <h2>Image</h2>
              <div class="image-container">
-                 <img src="images/project1visual.jpg" alt="visual">
+                 <img src="images/project1visual.jpg" alt="LED blinking light">
              </div>
 
             <!-- Video Section -->
