--- a/Projects/project1.html
+++ b/Projects/project1.html
@@ -25,6 +25,27 @@
                 adjust lighting for a more comfortable and natural feel.
             </p>
 
+            <h2>Arduino Setup</h2>
+            <p>
+                Arduino Setup
+                
+                1. Connect the LEDs to the Arduino's GPIO pins:
+
+                2. Connect the cathode (shorter lead) of LED to the GND pin of the Arduino.
+                   Connect the anode (longer lead) of each LED to the following GPIO pins on the Arduino:
+                    LED : Pin ~3 (Pin 3 is a PWM pin, and PWM allows you to fade an LED by controlling its brightness using duty cycles. )
+
+                3. Add current-limiting resistors (220 ohms) to the LED anode to prevent excessive current flow.
+
+                For using push buttons:
+
+                4. Connect one terminal of each push button to a GPIO pin on the Arduino.
+                    Connect the other terminal of each push button to the GND pin.
+                    Add pull-up or pull-down resistors (10k ohms) to the GPIO pins connected to the push buttons for stable readings.
+                    
+                5. Upload the Arduino code (arduino_code.ino) to your Arduino board using the Arduino IDE.
+            </p>
+
             <h2>Materials Used: </h2>
             <ul>
                 <li>Arduino Uno</li>
