--- a/Projects/project1.html
+++ b/Projects/project1.html
@@ -26,25 +26,24 @@
             </p>
 
             <h2>Arduino Setup</h2>
-            <p>
-                Arduino Setup
+            <ul>
                 
-                1. Connect the LEDs to the Arduino's GPIO pins:
+               <li>1. Connect the LEDs to the Arduino's GPIO pins:</li> 
 
-                2. Connect the cathode (shorter lead) of LED to the GND pin of the Arduino.
+               <li> 2. Connect the cathode (shorter lead) of LED to the GND pin of the Arduino.</li>
                    Connect the anode (longer lead) of each LED to the following GPIO pins on the Arduino:
                     LED : Pin ~3 (Pin 3 is a PWM pin, and PWM allows you to fade an LED by controlling its brightness using duty cycles. )
 
-                3. Add current-limiting resistors (220 ohms) to the LED anode to prevent excessive current flow.
+               <li>3. Add current-limiting resistors (220 ohms) to the LED anode to prevent excessive current flow.</li> 
 
-                For using push buttons:
+               <li> For using push buttons:</li>
 
-                4. Connect one terminal of each push button to a GPIO pin on the Arduino.
-                    Connect the other terminal of each push button to the GND pin.
-                    Add pull-up or pull-down resistors (10k ohms) to the GPIO pins connected to the push buttons for stable readings.
-                    
-                5. Upload the Arduino code (arduino_code.ino) to your Arduino board using the Arduino IDE.
-            </p>
+               <li>4. Connect one terminal of each push button to a GPIO pin on the Arduino.</li>
+                <li>5.Connect the other terminal of each push button to the GND pin.</li>
+               <li> 6. Add pull-up or pull-down resistors (10k ohms) to the GPIO pins connected to the push buttons for stable readings.</li> 
+
+                <li>7. Upload the Arduino code (arduino_code.ino) to your Arduino board using the Arduino IDE.</li>
+            </ul>
 
             <h2>Materials Used: </h2>
             <ul>
