removed numbers from bulolet points

--- a/Projects/project1.html
+++ b/Projects/project1.html
@@ -28,19 +28,19 @@
             <h2>Arduino Setup</h2>
             <ul>
                 
-               <li>1. Connect the LEDs to the Arduino's GPIO pins:</li> 
+               <li> Connect the LEDs to the Arduino's GPIO pins:</li> 
 
-               <li> 2. Connect the cathode (shorter lead) of LED to the GND pin of the Arduino.</li>
+               <li> Connect the cathode (shorter lead) of LED to the GND pin of the Arduino.</li>
                    Connect the anode (longer lead) of each LED to the following GPIO pins on the Arduino:
                     LED : Pin ~3 (Pin 3 is a PWM pin, and PWM allows you to fade an LED by controlling its brightness using duty cycles. )
 
-               <li>3. Add current-limiting resistors (220 ohms) to the LED anode to prevent excessive current flow.</li> 
+               <li>  Add current-limiting resistors (220 ohms) to the LED anode to prevent excessive current flow.</li> 
 
-               <li> For using push buttons:</li>
+               <li>  For using push buttons:</li>
 
-               <li>4. Connect one terminal of each push button to a GPIO pin on the Arduino.</li>
-                <li>5.Connect the other terminal of each push button to the GND pin.</li>
-               <li> 6. Add pull-up or pull-down resistors (10k ohms) to the GPIO pins connected to the push buttons for stable readings.</li> 
+               <li>  Connect one terminal of each push button to a GPIO pin on the Arduino.</li>
+                <li>  Connect the other terminal of each push button to the GND pin.</li>
+               <li>   Add pull-up or pull-down resistors (10k ohms) to the GPIO pins connected to the push buttons for stable readings.</li> 
 
                 <li>7. Upload the Arduino code (arduino_code.ino) to your Arduino board using the Arduino IDE.</li>
             </ul>
