--- a/Projects/project1.html
+++ b/Projects/project1.html
@@ -36,13 +36,13 @@
 
                <li>  Add current-limiting resistors (220 ohms) to the LED anode to prevent excessive current flow.</li> 
 
-               <li>  For using push buttons:</li>
+                <p>For using push buttons:</p>
 
                <li>  Connect one terminal of each push button to a GPIO pin on the Arduino.</li>
                 <li>  Connect the other terminal of each push button to the GND pin.</li>
                <li>   Add pull-up or pull-down resistors (10k ohms) to the GPIO pins connected to the push buttons for stable readings.</li> 
 
-                <li>7. Upload the Arduino code (arduino_code.ino) to your Arduino board using the Arduino IDE.</li>
+                <li> Upload the Arduino code (arduino_code.ino) to your Arduino board using the Arduino IDE.</li>
             </ul>
 
             <h2>Materials Used: </h2>
