--- a/Projects/project2.html
+++ b/Projects/project2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -38,6 +38,11 @@
             margin-bottom: 20px;
             border-left: 4px solid #4CAF50;
         }
+        video {
+            display: block;
+            margin: 20px auto;
+            max-width: 100%;
+        }
     </style>
 </head>
 <body>
@@ -67,6 +72,14 @@
                 The pitch of the note changes based on how much the sensor is bent, making it an intuitive and physical way to play digital instruments.
             </p>
         </div>
+
+        <!-- Video Section -->
+        <h2>Project Demonstration Video</h2>
+        <p>Watch the video below to see the Flex Sensor MIDI Piano in action:</p>
+        <video controls>
+            <source src="piano.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
 
         <h2>Arduino Code</h2>
         <p>
