--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
                 <!-- Project 2 -->
                 <div class="project">
-                    <h3>Project 2: Temperature Sensor</h3>
-                    <p>A temperature sensor to monitor environmental changes, with real-time display on an LCD screen.</p>
+                    <h3>Project 2:Flex Sensor MIDI Piano</h3>
+                    <p> The Flex Sensor MIDI Piano allows you to control piano notes through finger bending using a flex sensor and Arduino.</p>
                     <a href="projects/project2.html" class="button">View Project</a>
                 </div>
 
