--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 <div class="project">
                     <h3>Project 2:Flex Sensor MIDI Piano</h3>
                     <p> The Flex Sensor MIDI Piano allows you to control piano notes through finger bending using a flex sensor and Arduino.</p>
-                    <a href="projects/project2.html" class="button">MIDI Piano Project</a>
+                    <a href="Projects/project2.html">MIDI Piano Project</a>
+
                 </div>
 
                 <!-- Add more projects here -->
