--- a/Projects/project2.html
+++ b/Projects/project2.html
@@ -55,8 +55,10 @@
             <p>
                 The "Flex Sensor MIDI Piano" is an interactive musical instrument built using an Arduino and a flex sensor. 
                 It converts the bending of the flex sensor into MIDI messages that are transmitted via USB, allowing the performer to play 
-                piano notes by bending their finger. This project demonstrates how a simple sensor can be used to control digital sounds 
-                and create an expressive performance interface.
+                piano notes by bending their finger. For this project, I integrated the online virtual MIDI piano from <a href="https://muted.io/piano/" target="_blank">Muted.io Piano</a> to trigger the notes. As the sensor bends, different notes are played, with pitch changes ranging from thicker to thinner.
+            </p>
+            <p>
+                I was inspired by a friend who wanted to cover a song for YouTube, and I thought it would be an interesting project to integrate sensor-based control with an online virtual piano.
             </p>
             <h3>Materials Used:</h3>
             <ul>
@@ -68,8 +70,8 @@
             </ul>
             <h3>Functionality:</h3>
             <p>
-                The flex sensor is mounted on a glove, and the bending of the finger triggers MIDI notes that are sent to a connected synthesizer or digital piano.
-                The pitch of the note changes based on how much the sensor is bent, making it an intuitive and physical way to play digital instruments.
+                The flex sensor is mounted on a glove, and bending the finger triggers MIDI notes on the virtual piano at <a href="https://muted.io/piano/" target="_blank">Muted.io Piano</a>.
+                The pitch changes based on how much the sensor is bent, making it an intuitive and physical way to play digital instruments.
             </p>
         </div>
 
@@ -80,12 +82,11 @@
             <source src="video/piano.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        
 
         <h2>Arduino Code</h2>
         <p>
             Below is the Arduino code used in this project. The flex sensor values are read and mapped to MIDI notes (C4 to C5 range). The Arduino sends these MIDI
-            messages directly via USB, making it compatible with any MIDI-enabled software.
+            messages directly via USB, and they are routed to the virtual piano at <a href="https://muted.io/piano/" target="_blank">Muted.io Piano</a>.
         </p>
         <pre><code>
 // Include the MIDIUSB library
@@ -128,13 +129,13 @@ void loop() {
         <h2>How It Works</h2>
         <p>
             The flex sensor is mounted on the index finger of a glove. As the performer bends their finger, the sensor's resistance changes, and this change is read by the 
-            Arduino as a voltage change. The Arduino then maps the bending motion to different MIDI notes (ranging from C4 to C5). These notes are sent via the USB cable to 
-            any MIDI-compatible software or hardware, allowing the performer to control a digital piano or synthesizer just by moving their hand.
+            Arduino as a voltage change. The Arduino then maps the bending motion to different MIDI notes (ranging from C4 to C5). These notes are sent via USB to 
+            the virtual piano at <a href="https://muted.io/piano/" target="_blank">Muted.io Piano</a>, where the notes are played in real time.
         </p>
         <h3>Usage:</h3>
         <ol>
             <li>Put on the glove and connect the Arduino to your computer via USB.</li>
-            <li>Open a MIDI-compatible application (e.g., Ableton Live, FL Studio, WebMIDI Piano).</li>
+            <li>Open the virtual piano at <a href="https://muted.io/piano/" target="_blank">Muted.io Piano</a>.</li>
             <li>As you bend your finger, you’ll hear different piano notes being played!</li>
         </ol>
 
