--- a/Projects/project2.html
+++ b/Projects/project2.html
@@ -79,7 +79,7 @@
         <h2>Project Demonstration Video</h2>
         <p>Watch the video below to see the Flex Sensor MIDI Piano in action:</p>
         <video controls>
-            <source src="video/piano.mp4" type="video/mp4">
+            <source src="../video/piano.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
 
