--- a/Projects/project1.html
+++ b/Projects/project1.html
@@ -71,7 +71,8 @@
             <h2>Demonstration Video</h2>
             <div class="video-container">
                 <video controls>
-                    <source src="video/project1LED_blink.mp4"type="video/mp4">
+            
+                    <source src="../video/project1LED_blink.mp4"type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
