--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <section id="projects">
             <div class="container">
                 <h2>My Arduino Projects</h2>
+                
                 <!-- Project 1 -->
                 <div class="project">
                     <h3>Project 1: LED Blink</h3>
@@ -48,12 +49,17 @@
 
                 <!-- Project 2 -->
                 <div class="project">
-                    <h3>Project 2:Flex Sensor MIDI Piano</h3>
-                    <p> The Flex Sensor MIDI Piano allows you to control piano notes through finger bending using a flex sensor and Arduino.</p>
-                    <a href="Projects/project2.html">MIDI Piano Project</a>
-
+                    <h3>Project 2: Flex Sensor MIDI Piano</h3>
+                    <p>The Flex Sensor MIDI Piano allows you to control piano notes through finger bending using a flex sensor and Arduino.</p>
+                    <a href="Projects/project2.html" class="button">View Project</a>
                 </div>
 
+                <!-- Project 3 -->
+                <div class="project">
+                    <h3>Project 3: Touch Sensitive Mood Indicator</h3>
+                    <p>This project uses a touch sensor to change the color of an LED to indicate different moods based on touch sensitivity, providing a visual feedback system.</p>
+                    <a href="Projects/project3.html" class="button">View Project</a>
+                </div>
                 
             </div>
         </section>
