added video for project3

--- a/Projects/Project3.html
+++ b/Projects/Project3.html
@@ -33,6 +33,14 @@
     .code pre {
       margin: 0;
     }
+    .video-container {
+      margin-top: 20px;
+      text-align: center;
+    }
+    .video-container video {
+      max-width: 100%;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
@@ -152,6 +160,16 @@ void moveServo(int times) {
 
   <h2>Final Notes</h2>
   <p>This touch-sensitive mood indicator is an interactive and visual representation of mood states. Experiment with the flex sensor’s threshold values to get accurate mood transitions, and customize the flower petals for a more personalized look!</p>
+
+  <h2>Project Video</h2>
+  <div class="video-container">
+    <!-- Replace "your-video.mp4" with the actual path to your video file -->
+    <video controls>
+      <source src="..\video\Touch Sens.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+
 </div>
 
 </body>
