--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                 <!-- Project 3 -->
                 <div class="project">
-                    <h3>Project 3: Touch Sensitive Mood Indicator</h3>
+                    <h3>Project 3: Touch-Sensitive Mood Indicator</h3>
                     <p>This project uses a touch sensor to change the color of an LED to indicate different moods based on touch sensitivity, providing a visual feedback system.</p>
                     <a href="Projects/project3.html" class="button">View Project</a>
                 </div>
