--- a/Projects/Project3.html
+++ b/Projects/Project3.html
@@ -165,7 +165,7 @@ void moveServo(int times) {
   <div class="video-container">
     
     <video controls>
-      <source src="..\video\Touch Sens.mp4" type="video/mp4">
+      <source src="../video/Touch Sens.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
