--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Arduino Projects - Tangible HCI</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <!-- Header Section -->
@@ -18,15 +19,44 @@
 
     <!-- Navigation Menu -->
     <nav>
-        <ul id="nav-menu" class="nav-menu"></ul>
+        <ul class="nav-menu">
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
     </nav>
 
     <!-- Main Content -->
     <main>
-        <!-- Sections dynamically populated via JavaScript -->
-        <section id="about" class="container"></section>
-        <section id="projects" class="container"></section>
-        <section id="contact" class="container"></section>
+        <!-- About Section -->
+        <section id="about">
+            <div class="container">
+                <h2>About the Course</h2>
+                <p>This website is a collection of Arduino projects for the Tangible Human-Computer Interaction course. Each project demonstrates physical computing concepts.</p>
+            </div>
+        </section>
+
+        <!-- Projects Section -->
+        <section id="projects">
+            <div class="container">
+                <h2>My Arduino Projects</h2>
+                <div id="project-list">
+                    <!-- Projects will be dynamically added here -->
+                </div>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact">
+            <div class="container">
+                <h2>Contact Me</h2>
+                <p>Feel free to reach out if you have any questions about these projects or the course.</p>
+                <ul>
+                    <li>Email: nusyyasir@gmail.com</li>
+                    <li>GitHub: <a href="https://github.com/nusyba23" target="_blank">github.com/nusyba23</a></li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <!-- Footer -->
@@ -35,75 +65,5 @@
             <p>&copy; 2024 Tangible HCI - Arduino Projects</p>
         </div>
     </footer>
-
-    <script>
-        // Navigation Menu
-        const navItems = [
-            { href: '#about', label: 'About' },
-            { href: '#projects', label: 'Projects' },
-            { href: '#contact', label: 'Contact' },
-        ];
-
-        const navMenu = document.getElementById('nav-menu');
-        navItems.forEach(item => {
-            const li = document.createElement('li');
-            const a = document.createElement('a');
-            a.href = item.href;
-            a.textContent = item.label;
-            li.appendChild(a);
-            navMenu.appendChild(li);
-        });
-
-        // About Section
-        const aboutSection = document.getElementById('about');
-        aboutSection.innerHTML = `
-            <h2>About the Course</h2>
-            <p>This website is a collection of Arduino projects for the Tangible Human-Computer Interaction course. Each project demonstrates physical computing concepts.</p>
-        `;
-
-        // Projects Section
-        const projectsSection = document.getElementById('projects');
-        projectsSection.innerHTML = `<h2>My Arduino Projects</h2>`;
-
-        const projects = [
-            {
-                title: 'Project 1: LED Blink',
-                description: 'This project demonstrates basic control of an LED with Arduino, including a button to control the light.',
-                link: 'Projects/project1.html',
-            },
-            {
-                title: 'Project 2: Flex Sensor MIDI Piano',
-                description: 'The Flex Sensor MIDI Piano allows you to control piano notes through finger bending using a flex sensor and Arduino.',
-                link: 'Projects/project2.html',
-            },
-            {
-                title: 'Project 3: Mood Indicator Interactive Tree',
-                description: 'This project features a touch-sensitive tree design where LED colors change dynamically based on mood indicators. It\'s an interactive and visually engaging experience.',
-                link: 'Projects/project3.html',
-            },
-        ];
-
-        projects.forEach(project => {
-            const div = document.createElement('div');
-            div.classList.add('project');
-            div.innerHTML = `
-                <h3>${project.title}</h3>
-                <p>${project.description}</p>
-                <a href="${project.link}" class="button">View Project</a>
-            `;
-            projectsSection.appendChild(div);
-        });
-
-        // Contact Section
-        const contactSection = document.getElementById('contact');
-        contactSection.innerHTML = `
-            <h2>Contact Me</h2>
-            <p>Feel free to reach out if you have any questions about these projects or the course.</p>
-            <ul>
-                <li>Email: nusyyasir@gmail.com</li>
-                <li>GitHub: <a href="https://github.com/nusyba23" target="_blank">github.com/nusyba23</a></li>
-            </ul>
-        `;
-    </script>
 </body>
 </html>
