--- a/Projects/Finalproject.html
+++ b/Projects/Finalproject.html
@@ -81,7 +81,7 @@
             <div class="container">
                 <h2>Demo Video</h2>
                 <video controls>
-                    <source src="video.mp4" type="video/mp4">
+                    <source src="../video/finaltree.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
