Features added for finalproject

--- a/Projects/Finalproject.html
+++ b/Projects/Finalproject.html
@@ -41,6 +41,16 @@
 
                     By blending natural elements with tangible computing concepts, the Mood Indicator Tree aims to showcase how physical objects can react to our inner worlds, creating a bridge between human emotions and their physical manifestations. Whether you're showcasing it as a part of an HCI course or inspiring others to combine creativity and technology, this project is sure to leave a lasting impression.
                 </p>
+                <p>
+                    Data is sent from Python scripts to Arduino, allowing real-time updates to the tree's lighting patterns based on user inputs. Python handles complex logic and processes 
+                    user interaction data before sending commands to the Arduino, which controls the LED animations.
+                </p>
+                <h3>Features:</h3>
+                <ul>
+                    <li>Real-time mood reflection with dynamic LED lighting.</li>
+                    <li>Integration of Python scripts with Arduino for data input and processing.</li>
+                    <li>Touch sensors for capturing user interaction and generating feedback.</li>
+                </ul>
             </div>
         </section>
 
